--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Exclude example.env
 !example.env
 
+# mediafiles
+data/media_files
+
 # Created by https://www.toptal.com/developers/gitignore/api/git,linux,macos,node,dotenv,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,linux,macos,node,dotenv,windows,visualstudiocode
 
